--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -1,7 +1,13 @@
 @import '_settings'
+@import 'navbar'
 
 normalize-css()
 base()
 
 body
   padding: 50px
+
+#content
+  max-width 1000px
+  padding 0 30px
+  margin 0 auto
