--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,3 +1,11 @@
+#navbar .logo {
+  width: 60px;
+  display: inline-block;
+}
+#navbar .logotype {
+  width: 400px;
+  display: inline-block;
+}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -188,6 +196,11 @@ body {
 }
 body {
   padding: 50px;
+}
+#content {
+  max-width: 1000px;
+  padding: 0 30px;
+  margin: 0 auto;
 }
 
  /*# sourceMappingURL=master.css.map */
