--- a/css/master.css
+++ b/css/master.css
@@ -1,10 +1,86 @@
+#navbar {
+  border-bottom: 4px solid rgba(0,0,0,0.1);
+  text-align: center;
+  padding-bottom: 10px;
+}
 #navbar .logo {
-  width: 60px;
+  width: 80px;
   display: inline-block;
+  padding: 0 10px;
 }
 #navbar .logotype {
-  width: 400px;
+  width: 300px;
   display: inline-block;
+  padding: 0 10px;
+  margin-left: 25px;
+}
+#navbar .menu {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 40px;
+}
+#navbar .menu ul {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0;
+}
+#navbar .menu .link {
+  display: inline-block;
+  list-style: none;
+  margin: 0 10px;
+  font-weight: bold;
+}
+#navbar .menu .link a {
+  color: #8e8e8d;
+  text-decoration: none;
+  padding-bottom: 5px;
+  font-size: 20px;
+}
+#navbar .menu .link a:hover {
+  border-bottom: 4px solid #8e8e8d;
+}
+#navbar .menu .switch {
+  display: inline-block;
+  font-size: 20px;
+  color: #8e8e8d;
+  vertical-align: middle;
+  font-weight: bold;
+  cursor: pointer;
+  margin-left: 40px;
+}
+@media screen and (max-width: 963px) {
+  #navbar .logo {
+    width: 60px;
+  }
+  #navbar .logotype {
+    width: 270px;
+  }
+  #navbar .menu {
+    margin-left: 20px;
+  }
+  #navbar .menu a,
+  #navbar .menu .switch {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 852px) {
+  #navbar {
+    text-align: center;
+  }
+  #navbar .logo {
+    width: 45px;
+  }
+  #navbar .logotype {
+    width: 250px;
+    margin-left: 15px;
+  }
+  #navbar .menu {
+    padding: 0;
+  }
+  #navbar .menu .link a,
+  #navbar .menu .switch {
+    font-size: 15px;
+  }
 }
 html {
   font-family: sans-serif;
@@ -195,12 +271,17 @@ body {
   font-size-adjust: auto;
 }
 body {
-  padding: 50px;
+  padding: 30px;
 }
 #content {
   max-width: 1000px;
   padding: 0 30px;
   margin: 0 auto;
+}
+@media screen and (max-width: 884px) {
+  #content {
+    padding: 0;
+  }
 }
 
  /*# sourceMappingURL=master.css.map */
