--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -5,9 +5,13 @@ normalize-css()
 base()
 
 body
-  padding: 50px
+  padding: 30px
 
 #content
   max-width 1000px
   padding 0 30px
   margin 0 auto
+
+@media screen and (max-width: 884px)
+  #content
+    padding 0 
