Add different pages and color behaviour.

--- a/assets/css/navbar.styl
+++ b/assets/css/navbar.styl
@@ -37,7 +37,10 @@
         font-size 20px
 
         &:hover
-          border-bottom 4px solid #8E8E8D
+          border-bottom 4px solid
+
+        &.active
+          border-bottom 4px solid
 
     .switch
       display inline-block
