--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -12,6 +12,22 @@ body
   padding 0 30px
   margin 0 auto
 
+.who
+  color #8baf1a !important
+  border-color #8baf1a !important
+
+.what
+  color #5377b9 !important
+  border-color #5377b9 !important
+
+.how
+  color #eb6477 !important
+  border-color #eb6477 !important
+
+.contact
+  color #c078af !important
+  border-color #c078af !important
+
 @media screen and (max-width: 884px)
   #content
-    padding 0 
+    padding 0
