--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,8 +16,7 @@ html
       #navbar
       block content
       
-    script(type="application/javascript", src="/js/vendor/1-jquery-1.12.4.min.js")
-    script(type="text/javascript", src="/js/templates.js")
-      
-    != config_js()
+    script(src="/js/vendor/1-jquery-1.12.4.min.js")
+    script(src="/js/templates.js")
+
     != js()
