--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
   head
     meta(charset='utf8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
-    meta(name='description', content='Evolution Coaching officia website.')
+    meta(name='description', content='Evolution Coaching official website.')
     meta(name='author', content= "Andrei Constantinescu")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title= _path
@@ -15,8 +15,8 @@ html
     #content
       #navbar
       block content
-      
-    script(src="/js/vendor/1-jquery-1.12.4.min.js")
-    script(src="/js/templates.js")
+    
+    script(src='https://code.jquery.com/jquery-2.2.4.min.js')
+    script(src='/js/templates.js')
 
     != js()
