--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,6 +17,6 @@ html
       block content
     
     script(src='https://code.jquery.com/jquery-2.2.4.min.js')
-    script(src='/js/templates.js')
+    script(src='js/templates.js')
 
     != js()
