--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,6 +2,8 @@
   border-bottom: 4px solid rgba(0,0,0,0.1);
   text-align: center;
   padding-bottom: 10px;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 #navbar .logo {
   width: 80px;
