Populate Who page.

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -1,11 +1,12 @@
 @import '_settings'
 @import 'navbar'
+@import 'pages'
 
 normalize-css()
 base()
 
 body
-  padding: 30px
+  padding 30px 30px 0 30px
 
 #content
   max-width 1000px
