--- a/views/who.jade
+++ b/views/who.jade
@@ -2,4 +2,22 @@ extends layout
 
 block content
   
-  h1 Who Page.
+  
+  .title.who: span
+    span.fr Qui sommes nous
+  
+  .description
+    .text
+      .fr Anne Roques et la gérante fondatrice de Evolution Coaching.
+    .list
+      ul
+        li
+          .fr Avec plus de 18 ans d'expérience dans le monde du business international, C'est une master coach professionnel qualifiée du International Coach Fédération (ICF)  et un membre associé de la Société Françqise de Coaching.  elle est maître praticien en programmation NeuroLinguistic (NLP)  et une facilitatrice de  “clean  language”.
+        li
+          .fr Année aussi une superviseure pour Coaching Supervision Academy (2009) et l'Association of Coaching Supervisors (2011)
+        li
+          .fr Elle est diplômée pour utiliser l’outil HoganLead Assessment,  accréditée pour gérer les conflits et certifiée facilitatrice en systémique organisationnelle. 
+        li
+          .fr Nous démontrons et pratique l'agilité et la rigueur à travers un style de questionnement minimaliste, cela signifie que les clients à trouver leurs propres solutions et sont compétents pour prendre des mesures.
+  
+  .footer
