--- a/views/what.jade
+++ b/views/what.jade
@@ -2,4 +2,62 @@ extends layout
 
 block content
   
-  h1 What Page.
+  .title.what: span
+    span.fr Que faisons nous?
+  
+  .description
+    .item
+      .mini-desc
+        .mini-desc-content
+          .mini-title.what
+            .fr Un à Un
+          p Coaching Exécutif de Leadership un à un
+
+          p Evolution Coaching accompagne des leaders, cadres supérleurs ou des membres de comité de direction sur des questions telles que:
+          
+          ul
+            li La clarification de la stratégie et l’alignment des priorités et des actions
+            li Reconnecter au sens de la vie et le sens du rôle professionnel.
+            li L’Optimisation de la fluidité de la dynamique organisationnelle.
+        
+        .mini-desc-img
+          img(src='img/header icons/1to1-icon.svg')
+    
+    .item
+      .mini-desc
+        .mini-desc-img.second
+          img(src='img/header icons/group-faciliation-icon.svg')
+
+        .mini-desc-content
+          .mini-title.what.center
+            .fr Facilitation de Groupe
+          p Evolution Coaching facilite des petits groupes (max 12) dans des domaines divers tels que:
+          
+          ul
+            li la gestion du changement
+            li le leadership
+            li la diversité culturelle et de genre
+            li L’Optimisation de la fluidité de la dynamique organisationnelle
+          
+        .mini-desc-img.second-mobile
+          img(src='img/header icons/group-faciliation-icon.svg')
+
+            
+    .item
+      .mini-desc
+        .mini-desc-content
+          .mini-title.what.center
+            .fr Supervision de Coach
+            
+          p Au coeur de la supervision se trouve la relation entre le coach, le client du coach et le contexte de l’enterprise.
+          p Un programme de supervision individuel avec Evolution Coaching peut:
+          
+          ul
+            li vous donner un espace de réflexion
+            li vous sensibilliser vis à vis d’angles morts potentiels
+            li vous fournir une étiquette de qualité professionnelle et éthique
+        
+        .mini-desc-img
+          img(src='img/header icons/coach-supervision-icon.svg')
+  
+  .footer
