--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -29,6 +29,15 @@ body
   color #c078af !important
   border-color #c078af !important
 
+.left
+  text-align left
+
+.center
+  text-align center
+
+.right
+  text-align right
+
 @media screen and (max-width: 884px)
   #content
     padding 0
