Populate How page.

--- a/views/how.jade
+++ b/views/how.jade
@@ -2,4 +2,56 @@ extends layout
 
 block content
   
-  h1 How Page.
+  .title.how: span
+    span.fr Comment le faisons?
+  
+  .description
+    .item
+      .mini-desc
+        .mini-desc-content
+          .mini-title.how
+            .fr Co-création
+          p Evolution Coaching est unique dans son engagement à la co-crèation. En fournissant une variété de perspectives et en travaillant minutieusement avec toutes les parties prenantes un dialogue dynamique et flexible émerge pour répondre aux besoins changeants de l’enterprise, l’équipe de leadership et les exécutifs seniors.
+
+        .mini-desc-img
+          img(src='img/header icons/co-creation-icon.svg')
+            
+    .item
+      .mini-desc
+        .mini-desc-img.second
+          img(src='img/header icons/stop-look-listen-icon.svg')
+
+        .mini-desc-content
+          .mini-title.how.center
+            .fr Arrêt, observation, écoute
+          p Nous créons un environnement où le client peut s’arrêter, observer et écouter. Dans un contexte de respect et de confidentialité, les clients se trouvent souvent face au défil de s’aligner avec leurs soi intêrieur et d’être à l’écoute de leur identité.
+          p Ce processus créé une transformation.
+
+        .mini-desc-img.second-mobile
+          img(src='img/header icons/stop-look-listen-icon.svg')
+    
+    .item
+      .mini-desc
+        .mini-desc-content
+          .mini-title.how
+            .fr Connaissance de soi
+            
+          p A travers le processus de coaching, une meilleure connaissance de sol émerge. Cela pourvoit de la clarté, ce qui énergise. Un résultat intentionné émerge et fournit un chemin de coaching du développement. Accepter sa personnalité (côté ombre et côté lumière), s’approprier son style de leadership, permettre d’évoluer en tant qu’être humain et leader.
+
+        .mini-desc-img
+          img(src='img/header icons/self-awareness-icon.svg')
+
+    .item
+      .mini-desc
+        .mini-desc-img.second
+          img(src='img/header icons/supervision-icon.svg')
+
+        .mini-desc-content
+          .mini-title.how.center
+            .fr Supervision
+          p A travers le processus de supervision des observations significatives émergent de manière respectueuse et élégante afin de mieux servir le client final.
+
+        .mini-desc-img.second-mobile
+          img(src='img/header icons/supervision-icon.svg')
+    
+  .footer
