--- a/assets/css/pages.styl
+++ b/assets/css/pages.styl
@@ -31,7 +31,7 @@
       .description
         width 100%
 
-.what-page
+.what-page, .how-page
 
   .title
     text-align center
@@ -98,3 +98,14 @@
     .description .mini-desc .mini-desc-content,
     .description .mini-desc .mini-desc-img
       width 100% !important
+
+.how-page
+  .description .item .mini-desc .mini-desc-img
+    img
+      width 200px
+
+    &.second
+      padding-left 90px
+
+  .footer
+    background-color #eb6477
