--- a/css/master.css
+++ b/css/master.css
@@ -209,6 +209,51 @@
 .how-page .footer {
   background-color: #eb6477;
 }
+.contact-page .title {
+  text-align: center;
+  font-size: 40px;
+  margin: 50px 0;
+}
+.contact-page .title span {
+  padding-bottom: 10px;
+  border-bottom: 3px solid;
+}
+.contact-page .description {
+  text-align: center;
+}
+.contact-page .description .contact-info,
+.contact-page .description .contact-img {
+  width: 45%;
+  display: inline-block;
+  vertical-align: middle;
+}
+.contact-page .description .contact-info {
+  text-align: left;
+  padding-left: 50px;
+  font-size: 20px;
+}
+.contact-page .description .contact-info ul {
+  list-style: none;
+}
+.contact-page .description .contact-img {
+  width: 200px;
+}
+.contact-page .footer {
+  max-width: 1000px;
+  margin: 0 auto;
+  background-color: #c078af;
+  margin-top: 250px;
+  height: 150px;
+}
+@media screen and (max-width: 852px) {
+  .contact-page .description .contact-info,
+  .contact-page .description .contact-img {
+    width: 100%;
+  }
+  .contact-page .description .contact-img {
+    width: 200px;
+  }
+}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
