Populate Contact page and add small tweaks.

--- a/assets/css/pages.styl
+++ b/assets/css/pages.styl
@@ -109,3 +109,47 @@
 
   .footer
     background-color #eb6477
+
+.contact-page
+  .title
+    text-align center
+    font-size 40px
+    margin 50px 0
+
+    span
+      padding-bottom 10px
+      border-bottom 3px solid
+
+  .description
+    text-align center
+
+    .contact-info, .contact-img
+      width 45%
+      display inline-block
+      vertical-align middle
+
+    .contact-info
+      text-align left
+      padding-left 50px
+      font-size 20px
+
+      ul
+        list-style none
+
+    .contact-img
+      width 200px
+
+  .footer
+    max-width 1000px
+    margin 0 auto
+    background-color #c078af
+    margin-top 250px
+    height 150px
+
+  @media screen and (max-width: 852px)
+    .description
+      .contact-info, .contact-img
+        width 100%
+
+      .contact-img
+        width 200px
