--- a/views/templates/navbar.jade
+++ b/views/templates/navbar.jade
@@ -6,4 +6,4 @@
       each item in menuItems
         li.link
           a(class= className + ' ' + item.id, href= item.url ) #{item.name}
-    .switch Eng/Fr
+    .switch(style='display: none') Eng/Fr
