--- a/css/master.css
+++ b/css/master.css
@@ -4,6 +4,7 @@
   padding-bottom: 10px;
   max-width: 1000px;
   margin: 0 auto;
+  padding-top: 30px;
 }
 #navbar .logo {
   width: 80px;
@@ -52,6 +53,10 @@
   font-weight: bold;
   cursor: pointer;
   margin-left: 40px;
+}
+#navbar.home-page-navbar {
+  border: none;
+  background-color: #f8f8ff;
 }
 @media screen and (max-width: 963px) {
   #navbar .logo {
@@ -443,11 +448,10 @@ body {
   font-size-adjust: auto;
 }
 body {
-  padding: 30px 30px 0 30px;
+  padding: 0 30px 0 30px;
 }
 #content {
   max-width: 1000px;
-  padding: 0 30px;
   margin: 0 auto;
 }
 .who {
@@ -474,6 +478,18 @@ body {
 }
 .right {
   text-align: right;
+}
+.home-video {
+  height: 900px;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  max-width: 1000px;
+  width: 100%;
+  background: #8baf1a;
+}
+.home-video video {
+  width: 100%;
 }
 @media screen and (max-width: 884px) {
   #content {
