God knows what i did here.

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -6,11 +6,10 @@ normalize-css()
 base()
 
 body
-  padding 30px 30px 0 30px
+  padding 0 30px 0 30px
 
 #content
   max-width 1000px
-  padding 0 30px
   margin 0 auto
 
 .who
@@ -37,6 +36,18 @@ body
 
 .right
   text-align right
+
+.home-video
+  height 900px
+  position absolute
+  top 0
+  z-index -1
+  max-width 1000px
+  width 100%
+  background #8baf1a
+
+  video
+    width 100%
 
 @media screen and (max-width: 884px)
   #content
