--- a/views/templates/navbar.jade
+++ b/views/templates/navbar.jade
@@ -1,6 +1,7 @@
 .navbar
-  .logo: img(src= logo)
-  .logotype: img(src= logotype)
+  a(href='/')
+    .logo: img(src= logo)
+    .logotype: img(src= logotype)
   .menu
     ul
       each item in menuItems
