--- a/assets/css/navbar.styl
+++ b/assets/css/navbar.styl
@@ -4,6 +4,7 @@
   padding-bottom 10px
   max-width 1000px
   margin 0 auto
+  padding-top 30px
 
   .logo
     width 80px
@@ -52,6 +53,10 @@
       font-weight bold
       cursor pointer
       margin-left 40px
+
+  &.home-page-navbar
+    border none
+    background-color ghostwhite
 
 @media screen and (max-width: 963px)
   #navbar
