--- a/css/master.css
+++ b/css/master.css
@@ -50,13 +50,11 @@
   font-size: 20px;
   color: #8e8e8d;
   vertical-align: middle;
-  font-weight: bold;
   cursor: pointer;
   margin-left: 40px;
 }
 #navbar.home-page-navbar {
   border: none;
-  background-color: #f8f8ff;
 }
 @media screen and (max-width: 963px) {
   #navbar .logo {
@@ -102,15 +100,22 @@
   border-bottom: 3px solid;
 }
 .who-page .description {
-  width: 55%;
+  width: 49%;
   padding-top: 20px;
   color: #80807f;
+  vertical-align: middle;
+  display: inline-block;
 }
 .who-page .description .text {
   text-indent: 40px;
 }
 .who-page .description .list li {
   margin: 10px 0;
+}
+.who-page .who-image {
+  width: 50%;
+  display: inline-block;
+  text-align: center;
 }
 .who-page .footer {
   max-width: 1000px;
@@ -143,11 +148,15 @@
 .how-page .description .item {
   margin: 40px 0;
 }
+.what-page .description .mini-desc,
+.how-page .description .mini-desc {
+  padding: 0 30px;
+}
 .what-page .description .mini-desc .mini-desc-content,
 .how-page .description .mini-desc .mini-desc-content {
   display: inline-block;
   vertical-align: middle;
-  width: 45%;
+  width: 49%;
 }
 .what-page .description .mini-desc .mini-desc-content ul,
 .how-page .description .mini-desc .mini-desc-content ul {
@@ -160,7 +169,7 @@
 .what-page .description .mini-desc .mini-desc-img,
 .how-page .description .mini-desc .mini-desc-img {
   display: inline-block;
-  width: 45%;
+  width: 50%;
   vertical-align: middle;
   text-align: center;
 }
@@ -243,11 +252,16 @@
 .contact-page .description .contact-img {
   width: 200px;
 }
+.contact-page .contact-street {
+  margin-top: 20px;
+}
+.contact-page .contact-street img {
+  width: 100%;
+}
 .contact-page .footer {
   max-width: 1000px;
   margin: 0 auto;
   background-color: #c078af;
-  margin-top: 250px;
   height: 150px;
 }
 @media screen and (max-width: 852px) {
@@ -479,9 +493,11 @@ body {
 .right {
   text-align: right;
 }
+.bold {
+  font-weight: bold;
+}
 .home-video {
   height: 900px;
-  position: absolute;
   top: 0;
   z-index: -1;
   max-width: 1000px;
@@ -490,6 +506,13 @@ body {
 }
 .home-video video {
   width: 100%;
+}
+.en,
+.fr {
+  display: none;
+}
+.show {
+  display: block;
 }
 @media screen and (max-width: 884px) {
   #content {
