--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -37,9 +37,12 @@ body
 .right
   text-align right
 
+.bold
+  font-weight bold
+
 .home-video
   height 900px
-  position absolute
+  // position absolute
   top 0
   z-index -1
   max-width 1000px
@@ -48,6 +51,12 @@ body
 
   video
     width 100%
+
+.en, .fr
+  display none
+
+.show
+  display block
 
 @media screen and (max-width: 884px)
   #content
