--- a/assets/css/pages.styl
+++ b/assets/css/pages.styl
@@ -9,9 +9,11 @@
       border-bottom 3px solid
 
   .description
-    width 55%
+    width 49%
     padding-top 20px
     color #80807F
+    vertical-align middle
+    display inline-block
 
     .text
       text-indent 40px
@@ -19,6 +21,11 @@
     .list
       li
         margin 10px 0
+
+  .who-image
+    width 50%
+    display inline-block
+    text-align center
 
   .footer
     max-width 1000px
@@ -50,11 +57,12 @@
       margin 40px 0
 
     .mini-desc
+      padding 0 30px
 
       .mini-desc-content
         display inline-block
         vertical-align middle
-        width 45%
+        width 49%
 
         ul
           padding-left 15px
@@ -64,7 +72,7 @@
 
       .mini-desc-img
         display inline-block
-        width 45%
+        width 50%
         vertical-align middle
         text-align center
 
@@ -139,11 +147,16 @@
     .contact-img
       width 200px
 
+  .contact-street
+    margin-top 20px
+    img
+      width 100%
+
+
   .footer
     max-width 1000px
     margin 0 auto
     background-color #c078af
-    margin-top 250px
     height 150px
 
   @media screen and (max-width: 852px)
