--- a/views/contact.jade
+++ b/views/contact.jade
@@ -3,7 +3,9 @@ extends layout
 block content
   
   .title.contact: span
-    span.fr Comment nous contacter
+    span
+      .fr Comment nous contacter
+      .en Contact us
   
   .description
     .contact-info
@@ -16,5 +18,8 @@ block content
 
     .contact-img
       img(src='img/header icons/contact-icon.svg')
+  
+  .contact-street
+    img(src='img/street.jpg')
   
   .footer
