--- a/assets/css/navbar.styl
+++ b/assets/css/navbar.styl
@@ -50,13 +50,12 @@
       font-size 20px
       color #8E8E8D
       vertical-align middle
-      font-weight bold
       cursor pointer
       margin-left 40px
 
   &.home-page-navbar
     border none
-    background-color ghostwhite
+  //   background-color ghostwhite
 
 @media screen and (max-width: 963px)
   #navbar
