--- a/views/what.jade
+++ b/views/what.jade
@@ -3,7 +3,9 @@ extends layout
 block content
   
   .title.what: span
-    span.fr Que faisons nous?
+    span
+      .fr Que faisons nous?
+      .en What do we do?
   
   .description
     .item
@@ -11,14 +13,25 @@ block content
         .mini-desc-content
           .mini-title.what
             .fr Un à Un
-          p Coaching Exécutif de Leadership un à un
+            .en One-to-One
+          p 
+            .fr Coaching Exécutif de Leadership un à un
+            .en One-to-One Executive Leadership Coaching
 
-          p Evolution Coaching accompagne des leaders, cadres supérleurs ou des membres de comité de direction sur des questions telles que:
+          p
+            .fr Evolution Coaching accompagne des leaders, cadres supérleurs ou des membres de comité de direction sur des questions telles que:
+            .en Evolution Coaching accompanies leaders, senior managers or C-Suite members on matters such as:
           
           ul
-            li La clarification de la stratégie et l’alignment des priorités et des actions
-            li Reconnecter au sens de la vie et le sens du rôle professionnel.
-            li L’Optimisation de la fluidité de la dynamique organisationnelle.
+            li
+                .fr La clarification de la stratégie et l’alignment des priorités et des actions
+                .en Clarification of strategy, alignment of priorities and actions
+            li
+                .fr Reconnecter au sens de la vie et le sens du rôle professionnel.
+                .en Reconnecting meaning and purpose on professional and personal journey
+            li
+                .fr L’Optimisation de la fluidité de la dynamique organisationnelle.
+                .en Optimising team effectiveness
         
         .mini-desc-img
           img(src='img/header icons/1to1-icon.svg')
@@ -31,13 +44,29 @@ block content
         .mini-desc-content
           .mini-title.what.center
             .fr Facilitation de Groupe
-          p Evolution Coaching facilite des petits groupes (max 12) dans des domaines divers tels que:
+            .en Group facilitation
+            
+          p
+            .fr Evolution Coaching facilite des petits groupes (max 12) dans des domaines divers tels que:
+            .en Evolution Coaching facilitates small groups (12 max) in areas as diverse as:
           
           ul
-            li la gestion du changement
-            li le leadership
-            li la diversité culturelle et de genre
-            li L’Optimisation de la fluidité de la dynamique organisationnelle
+            li
+              .fr la gestion du changement
+              .en Change management
+
+            li
+              .fr le leadership
+              .en Leadership
+
+            li
+              .fr la diversité culturelle et de genre
+              .en Cultural and gender
+
+            li
+              .fr L’Optimisation de la fluidité de la dynamique organisationnelle
+              .en Optimising team effectiveness
+
           
         .mini-desc-img.second-mobile
           img(src='img/header icons/group-faciliation-icon.svg')
@@ -48,14 +77,26 @@ block content
         .mini-desc-content
           .mini-title.what.center
             .fr Supervision de Coach
+            .en Coach Supervision
             
-          p Au coeur de la supervision se trouve la relation entre le coach, le client du coach et le contexte de l’enterprise.
-          p Un programme de supervision individuel avec Evolution Coaching peut:
+          p 
+            .fr Au coeur de la supervision se trouve la relation entre le coach, le client du coach et le contexte de l’enterprise.
+            .en Core to supervision is the focus in the coaching relationship between the coach, the coachee and the corporate context.
+
+          p 
+            .fr Un programme de supervision individuel avec Evolution Coaching peut:
+            .en A One-to-One supervision programme with Evolution Coaching will:
           
           ul
-            li vous donner un espace de réflexion
-            li vous sensibilliser vis à vis d’angles morts potentiels
-            li vous fournir une étiquette de qualité professionnelle et éthique
+            li 
+              .fr vous donner un espace de réflexion
+              .en Give you a reflective space
+            li 
+              .fr vous sensibilliser vis à vis d’angles morts potentiels
+              .en Raise awareness to the possible blind spots
+            li 
+              .fr vous fournir une étiquette de qualité professionnelle et éthique
+              .en Provide a quality assurance label by maintaining professional and ethical standards
         
         .mini-desc-img
           img(src='img/header icons/coach-supervision-icon.svg')
