--- a/views/who.jade
+++ b/views/who.jade
@@ -4,20 +4,37 @@ block content
   
   
   .title.who: span
-    span.fr Qui sommes nous
+    span
+      .fr Qui sommes nous
+      .en Who are we?
   
   .description
     .text
       .fr Anne Roques et la gérante fondatrice de Evolution Coaching.
+      .en Evolution coaching is led by Anne Roques.
+
     .list
       ul
         li
           .fr Avec plus de 18 ans d'expérience dans le monde du business international, C'est une master coach professionnel qualifiée du International Coach Fédération (ICF)  et un membre associé de la Société Françqise de Coaching.  elle est maître praticien en programmation NeuroLinguistic (NLP)  et une facilitatrice de  “clean  language”.
+          .en We are bilingual-French and multicultural having lives and work outside of our country of origin for many years. We often coach in both French and English where issues touch on matters of cultural identity or context
+
         li
           .fr Année aussi une superviseure pour Coaching Supervision Academy (2009) et l'Association of Coaching Supervisors (2011)
+          .en We have strong business backgrounds across multiple sectors, which means that we understand the territory - often characterised by compleity, pressure and fast-pace
+
         li
           .fr Elle est diplômée pour utiliser l’outil HoganLead Assessment,  accréditée pour gérer les conflits et certifiée facilitatrice en systémique organisationnelle. 
+          .en We demonstrate and pratice agility and rigor through a minimalist questioning style, this means clients find their own solutions are empowered to take action
+
         li
           .fr Nous démontrons et pratique l'agilité et la rigueur à travers un style de questionnement minimaliste, cela signifie que les clients à trouver leurs propres solutions et sont compétents pour prendre des mesures.
+          .en With over 18 years in international business, she is a professional certified master coach with International Coach Federation (ICF) and an Associate Member of the French Society of Coaching. She is a Master Practitioner in NeuroLinguistic Programming (NLP) and a ckean anguage facilitator
+        
+        li.en Anne is also an accredited supervisor for coaches certified with Coaching Supervision Academy (2009) and the Association of Coaching Supervisors (2011).
+        
+        li.en She was certified to use the HoganLead Assessment tool (2012)
   
+  .who-image
+    img(src='/img/photo-1.png')
   .footer
