--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,8 +16,7 @@ html
     #content
       block content
     
-    //- script(src='https://code.jquery.com/jquery-2.2.4.min.js')
-    script(src='js/vendor/1-jquery-1.12.4.min.js')
+    script(src='https://code.jquery.com/jquery-2.2.4.min.js')
     script(src='js/templates.js')
 
     != js()
