--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   
-  .home-video: video(src="/videos/video.mp4" controls)
+  .home-video: video(src="videos/video.mp4" controls)
