--- a/views/who.jade
+++ b/views/who.jade
@@ -36,5 +36,5 @@ block content
         li.en She was certified to use the HoganLead Assessment tool (2012)
   
   .who-image
-    img(src='/img/photo-1.png')
+    img(src='img/photo-1.png')
   .footer
