Fix navbar page indicator.

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -12,21 +12,28 @@ body
   max-width 1000px
   margin 0 auto
 
-.who
+.who, .who a
   color #8baf1a !important
-  border-color #8baf1a !important
 
-.what
+  &:hover, &.active
+    border-color #8baf1a !important
+
+.what, .what a
   color #5377b9 !important
-  border-color #5377b9 !important
 
-.how
+  &:hover, &.active
+    border-color #5377b9 !important
+
+.how, .how a
   color #eb6477 !important
-  border-color #eb6477 !important
 
-.contact
+  &:hover, &.active
+    border-color #eb6477 !important
+
+.contact, .contact a
   color #c078af !important
-  border-color #c078af !important
+  &:hover, &.active
+    border-color #c078af !important
 
 .left
   text-align left
