--- a/assets/css/navbar.styl
+++ b/assets/css/navbar.styl
@@ -32,18 +32,12 @@
       list-style none
       margin 0 10px
       font-weight bold
+      border-bottom 4px solid transparent
 
       a
-        color #8E8E8D
         text-decoration none
         padding-bottom 5px
         font-size 20px
-
-        &:hover
-          border-bottom 4px solid
-
-        &.active
-          border-bottom 4px solid
 
     .switch
       display inline-block
@@ -54,8 +48,8 @@
       margin-left 40px
 
   &.home-page-navbar
-    border none
-  //   background-color ghostwhite
+    // border none
+    background-color ghostwhite
 
 @media screen and (max-width: 963px)
   #navbar
