--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
     meta(name='description', content='Evolution Coaching official website.')
     meta(name='author', content= "Andrei Constantinescu")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(href="https://fonts.googleapis.com/css?family=Nunito:400,700", rel="stylesheet")
     title Evolution Coaching
     != css()
 
