--- a/assets/css/pages.styl
+++ b/assets/css/pages.styl
@@ -119,6 +119,11 @@
     background-color #eb6477
 
 .contact-page
+  .phone-list
+    margin-top 0
+    vertical-align top
+    display inline-block
+
   .title
     text-align center
     font-size 40px
