--- a/views/contact.jade
+++ b/views/contact.jade
@@ -10,9 +10,9 @@ block content
   .description
     .contact-info
       p email: 
-        a(href='mailto:info@evolution-coaching.org') info@evolution-coaching.org
-      p Phone:
-        ul 
+        a(href='mailto:info@evolution-coaching.org', style='padding-left: 50px ') info@evolution-coaching.org
+      span Phone:
+        ul.phone-list
           li +44 (0) 7971 534 005
           li +44 (0) 6971 638 895
 
