--- a/views/how.jade
+++ b/views/how.jade
@@ -33,7 +33,7 @@ block content
           
           p 
             .fr Nous créons un environnement où le client peut s’arrêter, observer et écouter. Dans un contexte de respect et de confidentialité, les clients se trouvent souvent face au défil de s’aligner avec leurs soi intêrieur et d’être à l’écoute de leur identité.
-            .en We create an environment where the client can 'stop, look and listen'. Providing respect and confidentiality, clients are often challenges to become tunes in to their inner-self and to be aligned with their identity. This process created transformational change.
+            .en We create an environment where the client can 'stop, look and listen'. Providing respect and confidentiality, clients are often challenged to become tuned in to their inner-self and to be aligned with their identity. This process created transformational change.
 
           p.fr Ce processus créé une transformation.
 
@@ -49,7 +49,7 @@ block content
             
           p 
             .fr A travers le processus de coaching, une meilleure connaissance de sol émerge. Cela pourvoit de la clarté, ce qui énergise. Un résultat intentionné émerge et fournit un chemin de coaching du développement. Accepter sa personnalité (côté ombre et côté lumière), s’approprier son style de leadership, permettre d’évoluer en tant qu’être humain et leader.
-            .en Through the coaching process, self-awareness emerges. This provides for clarity, which in turn energies. A purposeful outcome emerges and provides a routemap for ongoing development coaching.
+            .en Through the coaching process, self-awareness emerges. This provides for clarity, which in turn energieses. A purposeful outcome emerges and provides a routemap for ongoing development coaching.
 
         .mini-desc-img
           img(src='img/header icons/self-awareness-icon.svg')
@@ -66,7 +66,7 @@ block content
             
           p
             .fr A travers le processus de supervision des observations significatives émergent de manière respectueuse et élégante afin de mieux servir le client final.
-            .en Through the supervision process meaningful observations and offered en elegant and respectful manner.
+            .en Through the supervision process meaningful observations are offered in an elegant and respectful manner.
 
         .mini-desc-img.second-mobile
           img(src='img/header icons/supervision-icon.svg')
