--- a/assets/css/navbar.styl
+++ b/assets/css/navbar.styl
@@ -1,10 +1,17 @@
 #navbar
-  border-bottom 4px solid rgba(0, 0, 0, 0.1)
+  box-shadow 0px 13px 11px -10px rgba(0,0,0,0.11)
   text-align center
   padding-bottom 10px
   max-width 1000px
   margin 0 auto
   padding-top 30px
+  position: fixed;
+  top: 0;
+  left: 50%;
+  width: 100vw;
+  transform: translateX(-50%);
+  z-index: 1000;
+  background: white;
 
   .logo
     width 80px
