--- a/views/how.jade
+++ b/views/how.jade
@@ -71,4 +71,4 @@ block content
         .mini-desc-img.second-mobile
           img(src='img/header icons/supervision-icon.svg')
     
-  .footer
+  //- .footer
