--- a/views/what.jade
+++ b/views/what.jade
@@ -101,4 +101,4 @@ block content
         .mini-desc-img
           img(src='img/header icons/coach-supervision-icon.svg')
   
-  .footer
+  //- .footer
